# tgbot

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yaml
src/: bot.py  schedule.json  schedule.py
